2022-06-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp: Refactor.  Drop unnecessary
	prototype for static function.
	(char_buffer::read_file, makeTempFiles): Demote return type from
	`int` to `void`.  Stop returning after calling functions that
	don't return.
	(char_buffer::read_file): Call `sys_fatal()` if `fread()`
	returns an error, similarly to other calls into the standard C
	library that this file makes.  Improve check for error from
	`fread()` by not regarding a return value of zero when the
	end-of-file indicator is set as an error condition.
	(makeFileName, checkImageDir, char_buffer::run_output_filter,
	scanArguments): Call `fatal()` instead of `error()` and then
	`exit(1)`.
	(makeFileName, scanArguments): Dismiss Shlemiel the Painter:
	save return value of `strlen()` and call `strcpy()` multiple
	times instead of mixing `strcpy()` and `strcat()`; the latter
	approach rescans the string unnecessarily.
	(char_buffer::run_output_filter): Stop passing unnecessary null
	pointer argument to diagnostic message functions.  Stop calling
	`fflush()` after libgroff diagnostic function, which always
	{ultimately} flushes the standard error stream itself.
	(makeTempFiles, do_file, main): Boolify.  Use idiomatic C++98
	null pointer constant.  Annotate it as null pointer to ease any
	future migration to ISO C++11.
	(makeTempFiles, do_file): Reorder null pointer equality
	comparisons to avoid inadvertent lvalue assignment.
	(scanArguments, main): Use `EXIT_SUCCESS` and `EXIT_FAILURE`
	constants from C library instead of integer literals for exit
	status.
	(do_file): Demote return type from `int` to `bool`.  Return
	Boolean literals.  Drop conditional with empty consequent.
	(main): Declare local variables closer to the points of use.
	Stop trying to be a register allocator: stop reusing loop index
	variable `i` as integer storage for another (albeit related)
	purpose; introduce `operand_index` instead.  Clarify logic by